<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.AuthActivity"
    android:orientation="vertical">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:layout_weight="1"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="100dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginRight="5dp"-->
            <!--android:text="@string/text_username"-->
            <!--android:textColor="@color/color_mtext"-->
            <!--android:textSize="15sp"/>-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/user_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/color_mtext"
            android:hint="@string/text_username">
        <EditText
            android:id="@+id/et_username_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"

            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/color_mtext"
            android:textColorHint="@color/color_mtext_hint"
            android:textSize="15sp"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_mtext_hint"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:gravity="center"
        android:orientation="horizontal">

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginRight="5dp"-->
            <!--android:text="@string/text_password"-->
            <!--android:textColor="@color/color_mtext"-->
            <!--android:textSize="15sp"/>-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/color_mtext"
            android:hint="@string/text_password">
        <EditText
            android:id="@+id/et_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@android:color/transparent"


            android:textColor="@color/color_mtext"
            android:textColorHint="@color/color_mtext_hint"
            android:textSize="15sp"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_mtext_hint"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_selector"

        android:enabled="false"

        android:text="@string/text_log_in"
        android:textColor="@color/color_text_btn"
        android:textSize="17sp"
        android:textStyle="bold"/>


</LinearLayout>
</android.support.constraint.ConstraintLayout>

